--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -68,7 +68,7 @@
 				class="rollable resource-label ap-spent"
 				data-spent="{{system.AP-cost.value}}"
 				data-label="BOOM! Attack with a {{item.name}}"
-				data-roll="d20+@skills.guns.value + @abilities.agi.mod - @penalty_total.value"
+				data-roll="d20+@skills.guns.value + @abilities.agi.mod - @penalty-total"
 				data-weapon-id="{{item._id}}"
 			>
 				{{system.AP-cost.value}}
@@ -117,7 +117,7 @@
 		<tr>
 		<td>AP</td><td>Dmg</td><td>Crit DV</td><td>Crit Dmg</td><td>Load</td><td>Str Req</td>
 		</tr><tr>
-		<td><label class="rollable resource-label ap-spent" data-spent="{{system.AP.value}}" data-label="BOOM! Attack with a {{item.name}}" data-roll="d20+@skills.guns.value + @abilities.agi.mod - @penalty_total.value">{{system.AP.value}}</label></td>
+		<td><label class="rollable resource-label ap-spent" data-spent="{{system.AP.value}}" data-label="BOOM! Attack with a {{item.name}}" data-roll="d20+@skills.guns.value + @abilities.agi.mod - @penalty-total">{{system.AP.value}}</label></td>
 		<td><label class="rollable resource-label" data-label="OUCH! DMG from a {{item.name}}" data-roll="{{system.damage.value}}">{{system.damage.value}}</td>
 		<td>{{system.critical.value}}</td>
 		<td>{{system.criticaldamage.value}}</td>
