add healing rate

--- a/templates/actor/parts/actor-status.hbs
+++ b/templates/actor/parts/actor-status.hbs
@@ -41,7 +41,7 @@
 			<td>Fatigue</td>
 		</tr>
 		<tr>
-			<td><input id="healing-rate" type="number" name="system.healing-rate.value" value=""></td>
+			<td><input type="number" name="system.healing-rate" value="{{system.healing-rate}}"></td>
 			<td><input type="number" name="system.combat-sequence.value" value="{{system.combat-sequence.value}}"></td>
 			<td><input type="number" name="system.penalties.fatigue.value" value="{{system.penalties.fatigue.value}}"></td>
 		</tr>
