Added Perks and Creatures to Template.js

--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -24,7 +24,7 @@ document.getElementById("modifycaps").value = '';
 	<table class="bio">
 		<tr>
 			<td colspan=3 class="character-name" style="text-align:left;"><input type="text" name="name" value="{{actor.name}}" /><br><br></td></tr>
-			<tr><td class="bio-label"><span class="label">Race:</span></td><td colspan=2><input type="text" name="system.race.value" value="{{system.race.value}}"/></td></tr>
+			<tr><td class="bio-label"><span class="label">Race:</span></td><td colspan=2><input type="text" name="actor.race.value" value="{{system.race.value}}"/></td></tr>
 			<tr><td class="bio-label"><span class="label">BG:</span></td><td colspan=2><input type="text" name="system.background.value" value="{{system.background.value}}"/></td></tr>			
 			<tr>
 			<td class="bio-label"><span class="label">Lvl:</span></td>
