--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -17,8 +17,8 @@
 	  <td>Cost</td><td>AC</td><td>DT</td><td>Slots</td><td>Load</td><td>STR Req.</td></tr>
 	  <tr>
 	  <td><input type="number" name="system.base-cost.value" value="{{system.base-cost.value}}" /></td>
-	  <td><input type="number" name="system.armor-class.value" value="{{system.armor-class.value}}" /></td>
-	  <td><input type="number" name="system.damage-threshold.value" value="{{system.damage-threshold.value}}" /></td>
+	  <td><input type="number" name="system.armorClass.value" value="{{system.armorClass.value}}" /></td>
+	  <td><input type="number" name="system.damageThreshold.value" value="{{system.damageThreshold.value}}" /></td>
 	  <td><input type="number" name="system.slots.value" value="{{system.slots.value}}" /></td>
 	  <td><input type="number" name="system.load.value" value="{{system.load.value}}" /></td>
 	  <td><input type="number" name="system.str-req.value" value="{{system.str-req.value}}" /></td>
