--- a/templates/actor/parts/actor-status.hbs
+++ b/templates/actor/parts/actor-status.hbs
@@ -14,7 +14,7 @@
 				<label
 					for="{{ability}}"
 					class="resource-label rollable"
-					data-roll="d20+{{skill.value}}+{{../../system.abilities.ability.mod}}-{{../../system.penalty-total}}"
+					data-roll="d20+{{skill.value}}+{{../../system.abilities.ability.mod}}-{{../../system.penaltyTotal}}"
 					data-label="{{actor.name}} performed a {{skill.label}} roll using {{ability}}"
 				>
 					{{ability}}
@@ -50,7 +50,7 @@
 			<td>Fatigue</td>
 		</tr>
 		<tr>
-			<td><input type="number" name="system.healing-rate" value="{{system.healing-rate}}"></td>
+			<td><input type="number" name="system.healingRate" value="{{system.healingRate}}"></td>
 			<td><input type="number" name="system.combat-sequence.value" value="{{system.combat-sequence.value}}"></td>
 			<td><input type="number" name="system.penalties.fatigue.value" value="{{system.penalties.fatigue.value}}"></td>
 		</tr>
@@ -60,13 +60,13 @@
 			<td>Group Sneak</td>
 		</tr>
 		<tr>
-			<td><input type="number" name="system.passive-sense" value="{{system.passive-sense}}"></td>
+			<td><input type="number" name="system.passiveSense" value="{{system.passiveSense}}"></td>
 			<td><input type="number" name="system.party-nerve.value" value="{{system.party-nerve.value}}"></td>
 			<td><input type="number" name="system.group-sneak.value" value="{{system.group-sneak.value}}"></td>
 		</tr>
 			<tr><td colspan=4><img id="vault-boy-status" style="width:auto;height:250px;display:block;margin:auto;border:none;" src='/systems/arcane-arcade-fallout/assets/vaultboy/vaultboy-icon.png'></td></tr>
 			<tr>
-			<td colspan=999>Total Penalties: {{system.penalty-total}}</td>
+			<td colspan=999>Total Penalties: {{system.penaltyTotal}}</td>
 			</tr>
 	</table>
 </td></tr>
