--- a/templates/actor/parts/actor-status.hbs
+++ b/templates/actor/parts/actor-status.hbs
@@ -31,14 +31,14 @@
 			<td  class="status-info-label">Hunger Lvl</td>
 			<td  class="status-info-label">Dehydration Lvl</td>
 			<td  class="status-info-label">Exhaustion Lvl</td>
-			<td  class="status-info-label"><span class="rollable" data-roll="d20-{{system.roll-penalties.value}}" data-label="Radiation DC Check: Roll over {{system.rad-dc.value}} to succeed">Radiation DC</span></td>
+			<td  class="status-info-label"><span class="rollable" data-roll="d20-{{system.roll-penalties.value}}" data-label="Radiation DC Check: Roll over {{system.radDC.value}} to succeed">Radiation DC</span></td>
 			<td  class="status-info-label">Radiation Lvl</td>
 			</tr>
 			<tr>
 			<td  class="status-info-value"><input type="number" name="system.penalties.hunger.value" value="{{system.penalties.hunger.value}}" min=0/></td>
 			<td  class="status-info-value"><input type="number" name="system.penalties.dehydration.value" value="{{system.penalties.dehydration.value}}" min=0/></td>
 			<td  class="status-info-value"><input type="number" name="system.penalties.exhaustion.value" value="{{system.penalties.exhaustion.value}}" min=0/></td>
-			<td  class="status-info-value"><input type="number" name="system.penalties.rad-dc.value" value="{{system.penalties.rad-dc.value}}" min=0/></td>
+			<td  class="status-info-value"><input type="number" name="system.penalties.radDC.value" value="{{system.penalties.radDC.value}}" min=0/></td>
 			<td  class="status-info-value"><input type="number" name="system.penalties.radiation.value" value="{{system.penalties.radiation.value}}" min=0/></td>
 		</tr>
 	</table>
