add models for weapons

--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -127,7 +127,7 @@ document.getElementById("modifycaps").value = '';
     </div>
 
     {{!-- Owned Perks Tab --}}
-    <div class="tab spells" data-group="primary" data-tab="perks">
+    <div class="tab perks" data-group="primary" data-tab="perks">
       {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-perks.hbs"}}
     </div>
 
