--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -32,7 +32,7 @@
 	  <tr>
 	  <td>Cost</td><td>AC</td><td>DT</td><td>Slots</td><td>Load</td><td>STR Req.</td></tr>
 	  <tr>
-	  <td>{{{system.base-cost.value}}}</td>
+	  <td>{{{system.cost.value}}}</td>
 	  <td id="armor-ac">{{{system.armorClass.value}}}</td>
 	  <td id="armor-dt">{{{system.damageThreshold.value}}}</td>
 	  <td>{{{system.slots.value}}}</td>
@@ -53,7 +53,7 @@
 <td class="inventory-slot ammos" style="width:50%;padding:10px;">
 
 
-{{#each rangedweapons as |item id|}}
+{{#each rangedWeapons as |item id|}}
     <li class='item flexrow' data-item-id='{{item._id}}'>
     <table>
 	<tr><td><h2>{{item.name}}</h2></td></tr>
@@ -107,7 +107,7 @@
 
 {{!-- MeleeWeapons Slot --}}
   
-{{#each meleeweapons as |item id|}}
+{{#each meleeWeapons as |item id|}}
     <li class='item flexrow' data-item-id='{{item._id}}'>
     <table>
 	<tr><td><h2>{{item.name}}</h2></td></tr>
