Added Foods and Drinks Compendium

--- a/templates/item/item-foodAnddrink-sheet.hbs
+++ b/templates/item/item-foodAnddrink-sheet.hbs
@@ -8,9 +8,9 @@
 <table style="width:200px;">
 <tr><td>Cost</td><td>Load</td><td>Qty</td></tr>
 <tr>
-<td><input type="number" name="system.base-cost.value" value="{{system.base-cost.value}}" /></td>
-<td><input type="number" name="system.load.value" value="{{system.load.value}}" /></td>
-<td><input type="number" name="system.itemQty.value" value="{{system.itemQty.value}}" /></td>
+<td><input type="number" name="system.cost" value="{{system.cost}}" /></td>
+<td><input type="number" name="system.load" value="{{system.load}}" /></td>
+<td><input type="number" name="system.quantity" value="{{system.quantity}}" /></td>
 </tr>
 </table>
 
