--- a/templates/item/item-ammo-sheet.hbs
+++ b/templates/item/item-ammo-sheet.hbs
@@ -17,11 +17,13 @@
             <td>Cost</td>
             <td>Load</td>
             <td>Quantity</td>
+            <td>Type</td>
         </tr>
         <tr>
             <td><input type="number" name="system.cost" value="{{system.cost}}" /></td>
             <td><input type="number" name="system.load" value="{{system.load}}" /></td>
             <td><input type="number" name="system.quantity" value="{{system.quantity}}" /></td>
+            <td><input type="text" name="system.type" value="{{system.type}}" /></td>
         </tr>
       </table>
     </div>
