fix():  update ap on weapon roll

--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -87,7 +87,7 @@
 								</tr>
 								<tr>
 									<td>
-										<label class="rollable resource-label ap-spent" data-spent="{{item.apCost}}"
+										<label class="rollable resource-label ap-spent" data-spent="{{item.system.apCost}}"
 											data-label="BOOM! Attack with a {{item.name}}"
 											data-roll="d20+@skills.guns.value + @abilities.agi.mod - @penaltyTotal"
 											data-weapon-id="{{item._id}}">
