--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -1,76 +1,97 @@
 <form class="{{cssClass}} {{actor.type}} flexcol" autocomplete="off">
 
-  {{!-- Sheet Header --}}
+ {{!-- Sheet Header --}}
   <header class="sheet-header">
-    <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
     <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Name"/></h1>
-      {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
-      use both the "grid" and "grid-Ncol" class where "N" can be any number
-      from 1 to 12 and will create that number of columns.  --}}
-      <div class="resources grid grid-3col">
-
-        {{!-- "flex-group-center" is also defined in the _grid.scss file
-        and it will add a small amount of padding, a border, and will
-        center all of its child elements content and text. --}}
-        <div class="resource flex-group-center">
-          <label for="system.health.value" class="resource-label">Health</label>
-          <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.health.value" value="{{system.health.value}}" data-dtype="Number"/>
-            <span> / </span>
-            <input type="text" name="system.health.max" value="{{system.health.max}}" data-dtype="Number"/>
-          </div>
-        </div>
-
-        <div class="resource flex-group-center">
-          <label for="system.power.value" class="resource-label">Power</label>
-          <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.power.value" value="{{system.power.value}}" data-dtype="Number"/>
-            <span> / </span>
-            <input type="text" name="system.power.max" value="{{system.power.max}}" data-dtype="Number"/>
-          </div>
-        </div>
-
-        <div class="resource flex-group-center">
-          <label for="system.cr" class="resource-label">CR / XP</label>
-          <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.cr" value="{{system.cr}}" data-dtype="Number"/>
-            <span> / </span>
-            <input type="text" disabled="true" name="system.xp" value="{{system.xp}}" data-dtype="Number"/>
-          </div>
-        </div>
-
+	<table>
+	<tr><td style="width:250px;" class="left">
+	<table class="bio">
+		<tr>
+			<td colspan=3 class="character-name" style="text-align:left;"><input type="text" name="name" value="{{actor.name}}" /><br><br></td></tr>
+			<tr><td class="bio-label"><span class="label">Race:</span></td><td colspan=2><input type="text" name="system.race" value="{{system.race}}"/></td></tr>
+			<tr><td class="bio-label"><span class="label">BG:</span></td><td colspan=2><input type="text" name="system.background" value="{{system.background}}"/></td></tr>			
+			<tr>
+		
+			</table>
+	</td><td>
+	<table><tr>
+		<table class="current-health current-stats" ><tr>
+		<td><span class="status-label">HP</span><progress style="width:90%;float:right;" class="statusbar health" value="{{system.health.value}}" max="{{system.health.max}}"> {{system.health.value}} </progress></td></tr>
+		<tr>
+			<td class="statusnum"><input type="number" name="system.health.value" value="{{system.health.value}}" max="{{system.health.max}}"/> / <input type="number" name="system.health.max" value="{{system.health.max}}" /></td>
+		</tr>
+	</table>
+			<table class="current-stamina current-stats" >
+			<tr>
+				<td colspan=2><span class="status-label">SP</span><progress style="width:90%;float:right;" class="statusbar stamina" value="{{system.stamina.value}}" max="{{system.stamina.max}}"> {{system.stamina.value}} </progress></td>
+			</tr>
+			<tr>
+				<td colspan=2 class="statusnum"><input type="number" name="system.stamina.value" value="{{system.stamina.value}}" max="{{system.stamina.max}}"/> / <input type="number" name="system.stamina.max" value="{{system.stamina.max}}" /></td>
+			</tr>
+			<tr>
+				<td colspan=2><span class="status-label">AP</span><progress style="width:90%;float:right;" class="statusbar stamina" value="{{system.actionPoints.value}}" max="{{system.actionPoints.max}}"> {{system.actionPoints.value}} </progress></td>
+			</tr>
+			<tr>
+				<td colspan=2 class="statusnum"><input type="number" name="system.actionPoints.value" value="{{system.actionPoints.value}}" max="{{system.actionPoints.max}}"/> / <input type="number" name="system.actionPoints.max" value="{{system.actionPoints.max}}" /></td>
+			</tr>
+		<tr>
+			<td><input id="armorClass-form" type="number" name="system.armorClass.value" value="{{system.armorClass.value}}">AC</td><td><input id="damageThreshold-form" type="number" name="system.damageThreshold.value" value="{{system.damageThreshold.value}}">DT</td>
+		</tr>
+	</table>
+	</td><td style="width:200px;">
+	<table>
+	<tr>
+	<td class="profile-image-td"><img src="{{actor.img}}" data-edit="img" title="{{actor.name}}" /></td></tr><tr><td>
+</td>
+	</tr>
+	</table>
+	</table>
+		
       </div>
     </div>
   </header>
 
-  {{!-- Sheet Tab Navigation --}}
+   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     {{!-- Default tab is specified in actor-sheet.mjs --}}
-    <a class="item" data-tab="description">Description</a>
-    <a class="item" data-tab="items">Items</a>
-    <a class="item" data-tab="effects">Effects</a>
+	<a class="item" data-tab="status">Status</a>
   </nav>
 
   {{!-- Sheet Body --}}
   <section class="sheet-body">
-
-    {{!-- Biography Tab --}}
-    <div class="tab biography" data-group="primary" data-tab="description">
-      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to the rollData property. --}}
-      {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
+            <div class="abilities flexcol">
+            <div class="ability flexrow flex-group-center">
+            </div>
+          </div>
+  {{!-- Owned status Tab --}}
+    <div class="tab status" data-group="primary" data-tab="status">
+      <section>
+        {{!-- For the main status list, span the right two columns --}}
+        <section>
+		
+<table><tr>
+	{{#each system.abilities as |ability key|}}
+	<td><label for="system.abilities.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="d20-{{system.roll-penalties.value}}+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{ability.label}}</label></td>
+	{{/each}}
+	<tr>
+	{{#each system.abilities as |ability key|}}
+	<td><input type="number" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number" min="0" max="10"/></td>
+	{{/each}}
+	</tr><tr>
+	{{#each system.abilities as |ability key|}}
+	<td><span class="ability-mod" data-label="{{ability.label}}"> {{numberFormat ability.mod decimals=0 sign=true}}</span></td>
+	{{/each}}
+</tr></table> 
+		
+		
+          {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in module/helpers/templates.mjs --}}
+          {{> "systems/arcane-arcade-fallout/templates/actor/parts/npc-status.hbs"}}
+		  
+		  
+        </section>
+      </section>
     </div>
-
-    {{!-- Owned Items Tab --}}
-    <div class="tab items" data-group="primary" data-tab="items">
-       {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-items.hbs"}}
-    </div>
-
-    {{!-- Active Effects Tab --}}
-    <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-      {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-effects.hbs"}}
-    </div>
-
   </section>
 </form>
 
+{{log system}}
