--- a/templates/actor/parts/actor-status.hbs
+++ b/templates/actor/parts/actor-status.hbs
@@ -1,3 +1,9 @@
+<style>
+.specialroll{
+	text-transform:uppercase;
+}
+</style>
+
 <table class="status-block">
 <tr><td class="skill-table">
 	<table><tr>
