--- a/templates/actor/parts/npc-status.hbs
+++ b/templates/actor/parts/npc-status.hbs
@@ -14,7 +14,7 @@
 				<label
 					for="{{ability}}"
 					class="resource-label rollable"
-					data-roll="d20+{{skill.value}}+{{../../system.abilities.ability.mod}}-{{../../system.penaltyTotal}}"
+					data-roll="d20+{{skill.value}}+{{../../system.abilities.ability.mod}}"
 					data-label="{{actor.name}} performed a {{skill.label}} roll using {{ability}}"
 				>
 					{{ability}}
@@ -28,21 +28,17 @@
 <td class="status-table">
 	<table>
 		<tr>
-			<td>Healing/Repair Rate</td>
-			<td  class="rollable" data-roll="d20+{{system.combatSequence}}+@abilities.per.mod">Combat Sequence</td>
-			<td>Fatigue</td>
+			<td>Healing Rate</td>
+			<td>Combat Sequence</td>
 			<td>Passive Sense</td>
-			<td>Testing</td>
 		</tr>
 		<tr>
 			<td><input type="number" name="system.healingRate" value="{{system.healingRate}}"></td>
 			<td><input type="number" name="system.combatSequence" value="{{system.combatSequence}}"></td>
-			<td><input type="number" name="system.penalties.fatigue.value" value="{{system.penalties.fatigue.value}}"></td>
-			<td><input type="number" name="system.passiveSense" value="{{system.passiveSense}}"></td>
-			<td><input type="text" name="system.details" value="{{system.details}}"></td>
+			<td><input type="number" name="system.passiveSense" value="{{system.passiveSense}}"></td>			
 		</tr>
-			<tr><td colspan=4 style="height:400px;text-align:left;padding:10px;">{{editor system.properties target="system.properties" button=true engine="prosemirror" editable=editable}}</td></tr>
-			
+			<tr><td colspan=4 style="height:400px;text-align:left;padding:10px;">{{editor system.properties target="system.properties" button=true engine="prosemirror" collaborate=false}}
+</td></tr>
 
 	</table>
 </td></tr>
