--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -87,10 +87,12 @@
 								</tr>
 								<tr>
 									<td>
-										<label class="rollable resource-label ap-spent" data-spent="{{item.apCost}}"
+										<label
+											class="rollable resource-label ap-spent"
 											data-label="BOOM! Attack with a {{item.name}}"
 											data-roll="d20+@skills.guns.value + @abilities.agi.mod - @penaltyTotal"
-											data-weapon-id="{{item._id}}">
+											data-weapon-id="{{item._id}}"
+										>
 											{{item.system.apCost}}
 										</label>
 									</td>
@@ -152,7 +154,6 @@
 											data-attribute-path="system.ammo.consumes.target"
 											data-document-name="Item"
 										>
-										{{log 'ammos' item}}
 											{{selectOptions item.ammos selected=item.system.ammo.consumes.target nameAttr="_id" labelAttr="name" blank="none"}}
 										</select>
 									</td>
@@ -236,5 +237,3 @@
 		</td>
 	</tr>
 </table>
-
-{{log rangedWeapons}}
