--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -10,15 +10,13 @@
 		{{!-- Armor Slot --}}
 		<td class="inventory-slot armorslot" style="width:50%;padding:10px;">
 			<table>
+				{{#each actor.items as |item id|}}
 				<tr>
-					<td>
-						{{#each actor.items as |item id|}}
-						<div style="float:left;" class='item flexrow' data-item-id='{{item._id}}'>
-							<a class='item-control item-edit'>{{item.name}} ({{system.quantity.value}}) </a>
-						</div>
-						{{/each}}
+					<td data-edit data-item-id='{{item._id}}'>				
+						{{item.name}} ({{item.system.quantity}})
 					</td>
 				</tr>
+				{{/each}}
 			</table>
 
 			{{#each armors as |item id|}}
@@ -87,12 +85,10 @@
 								</tr>
 								<tr>
 									<td>
-										<label
-											class="rollable resource-label ap-spent"
+										<label class="rollable resource-label ap-spent"
 											data-label="BOOM! Attack with a {{item.name}}"
 											data-roll="d20+@skills.guns.value + @abilities.agi.mod - @penaltyTotal"
-											data-weapon-id="{{item._id}}"
-										>
+											data-weapon-id="{{item._id}}">
 											{{item.system.apCost}}
 										</label>
 									</td>
@@ -107,16 +103,6 @@
 									<td>{{item.system.critical.bonus}}</td>
 									<td>{{item.system.load}}</td>
 									<td>{{item.system.strengthRequirement}}</td>
-								</tr>
-							</table>
-							<table class="equipped-stats">
-								<tr>
-									<td>Type</td>
-									<td>Rounds</td>
-								</tr>
-								<tr>
-									<td>{{system.ammo.type}}</td>
-									<td>{{system.ammo.capacity.value}}</td>
 								</tr>
 							</table>
 							<table class="equipped-stats">
@@ -141,22 +127,37 @@
 								</tr>
 								<tr>
 									<td>Type</td>
-									<td>Quantity</td>
+									<td>Rounds per attack</td>
 									<td>Item</td>
 								</tr>
 								<tr>
 									<td>{{item.system.ammo.type}}</td>
 									<td>{{item.system.ammo.consumes.amount}}</td>
 									<td>
-										<select
-											data-action="updateEmbeddedItem"
-											data-item-id="{{item._id}}"
-											data-attribute-path="system.ammo.consumes.target"
-											data-document-name="Item"
-										>
-											{{selectOptions item.ammos selected=item.system.ammo.consumes.target nameAttr="_id" labelAttr="name" blank="none"}}
+										<select data-set-ammo data-weapon-id="{{item._id}}">
+											{{selectOptions item.ammos selected=item.system.ammo.consumes.target
+											nameAttr="_id" labelAttr="name" blank="none"}}
 										</select>
 									</td>
+								</tr>
+							</table>
+							<table class="equipped-stats">
+								<tr>
+									<td colspan=999>AMMO / CAPACITY</td>
+								</tr>
+								<tr>
+									<td>Reload</td>
+									<td>Current Ammo</td>
+									<td>Max</td>
+								</tr>
+								<tr>
+									<td>
+										<button data-reload data-weapon-id="{{item._id}}">
+											reload
+										</button>
+									</td>
+									<td>{{item.system.ammo.capacity.value}}</td>
+									<td>{{item.system.ammo.capacity.max}}</td>
 								</tr>
 							</table>
 							<div class='item-controls'>
