--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -75,7 +75,7 @@
 	{{/each}}
 	<tr>
 	{{#each system.abilities as |ability key|}}
-	<td><input type="number" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number" min="0" max="10"/></td>
+	<td><input type="number" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number" min="0"/></td>
 	{{/each}}
 	</tr><tr>
 	{{#each system.abilities as |ability key|}}
