--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -1,11 +1,3 @@
-<style>
-	.sheet .equipped-stats td {
-		border: solid 1px;
-		vertical-align:middle;
-	}
-</style>
-
-
 <table>
 	<tr>
 		{{!-- Armor Slot --}}
@@ -86,19 +78,19 @@
 								</tr>
 								<tr>
 									<td>
-										<label class="rollable resource-label ap-spent"
+										<button class="rollable resource-label ap-spent"
 											data-label="BOOM! Attack with a {{item.name}}"
 											data-roll="d20+@skills.guns.value + @abilities.agi.mod - @penaltyTotal"
 											data-weapon-id="{{item._id}}">
 											{{item.system.apCost}}
-										</label>
+										</button>
 									</td>
 									<td>
-										<label class="rollable resource-label"
+										<button class="rollable resource-label"
 											data-label="OUCH! DMG from a {{item.name}}"
 											data-roll="{{item.system.damage.formula}}">
 											{{item.system.damage.formula}}
-										</label>
+										</button>
 									</td>
 									<td>{{item.system.critical.dice}}</td>
 									<td>{{item.system.critical.bonus}}</td>
@@ -151,7 +143,7 @@
 									<td>{{item.system.ammo.capacity.value}} / {{item.system.ammo.capacity.max}}</td>
 									<td>
 										<button data-reload data-weapon-id="{{item._id}}">
-											reload
+											RELOAD
 										</button>
 									</td>
 									<td> 
@@ -161,9 +153,9 @@
 							</table>
 							<div class='item-controls'>
 								<a style="float:right;margin-right:10px;" class='item-control item-delete'
-									title='{{localize "DOCUMENT.Delete" type=' perk'}}'><i class='fas fa-trash'></i></a>
+									title='{{localize "DOCUMENT.Delete" type=' item'}}'><i class='fas fa-trash'></i></a>
 								<a style="float:right;margin-right:10px;" class='item-control item-edit'
-									title='{{localize "DOCUMENT.Update" type=' perk'}}'><i class='fas fa-edit'></i></a>
+									title='{{localize "DOCUMENT.Update" type=' item'}}'><i class='fas fa-edit'></i></a>
 							</div>
 						</td>
 					</tr>
@@ -225,9 +217,9 @@
 							</table>
 							<div class='item-controls'>
 								<a style="float:right;margin-right:10px;" class='item-control item-delete'
-									title='{{localize "DOCUMENT.Delete" type=' perk'}}'><i class='fas fa-trash'></i></a>
+									title='{{localize "DOCUMENT.Delete" type=' item'}}'><i class='fas fa-trash'></i></a>
 								<a style="float:right;margin-right:10px;" class='item-control item-edit'
-									title='{{localize "DOCUMENT.Update" type=' perk'}}'><i class='fas fa-edit'></i></a>
+									title='{{localize "DOCUMENT.Update" type=' item'}}'><i class='fas fa-edit'></i></a>
 							</div>
 						</td>
 					</tr>
