--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -85,10 +85,11 @@
 								</tr>
 								<tr>
 									<td>
-										<label class="rollable resource-label ap-spent"
-											data-label="BOOM! Attack with a {{item.name}}"
-											data-roll="d20+@skills.guns.value + @abilities.agi.mod - @penaltyTotal"
-											data-weapon-id="{{item._id}}">
+										<label
+											data-weapon-roll
+											data-weapon-id="{{item._id}}"
+											class="resource-label"
+										>
 											{{item.system.apCost}}
 										</label>
 									</td>
@@ -196,7 +197,8 @@
 								</tr>
 								<tr>
 									<td>
-										<label class="rollable resource-label ap-spent" data-spent="{{system.apCost}}"
+										<label class="rollable resource-label"
+											data-weapon-roll
 											data-label="BOOM! Attack with a {{item.name}}"
 											data-roll="d20+@skills.guns.value + @abilities.agi.mod - @penaltyTotal">
 											{{system.apCost}}
